--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -4,10 +4,7 @@ on:
     branches: [ main ]
 jobs:
   test-pwsh:
-    strategy:
-      matrix:
-        platform: [macos-latest, ubuntu-latest, windows-latest]
-    runs-on: ${{ matrix.platform }}
+    runs-on: mac-os latest
     steps:
     - uses: actions/checkout@v3
     - name: Check Mac OS (pwsh)
