--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -4,7 +4,7 @@ on:
     branches: [ main ]
 jobs:
   test-pwsh:
-    runs-on: mac-os latest
+    runs-on: macos-latest
     steps:
     - uses: actions/checkout@v3
     - name: Check Mac OS (pwsh)
